-Ability to compose resources --sub resources url=parentUrl+this.Url -Look and feel --Fixing alignment in resource page

--- a/proposed/public/stylesheets/mystyles.css
+++ b/proposed/public/stylesheets/mystyles.css
@@ -150,6 +150,9 @@ outline: none;
 cursor: default;
 }
 
+.bs-docs-sidebar {
+		margin-right: 1em;
+}
 
 li.jstree-open > a { font-family: "Helvetica Neue",Helvetica, Arial, sans-serif;; }
 li.jstree-closed > a { font-family: "Helvetica Neue",Helvetica, Arial, sans-serif;; }
